crates/macro-tools/tests/ui/builder/fail/unsupported_option.rs
use picea_macro_tools::Builder;

#[derive(Builder)]
struct Meta {
    #[builder(shared)]
    value: String,
}

fn main() {}
