crates/macro-tools/tests/ui/builder/fail/unsupported_option.stderr
error: unsupported builder option
 --> tests/ui/builder/fail/unsupported_option.rs:5:15
  |
5 |     #[builder(shared)]
  |               ^^^^^^
